# python-rap-template

./: README.md  catalog-info.yaml  copier.yml  gh_auth.py  pyproject.toml  template.yaml
.github/workflows/: ci.yml  dependabot-notifications.yml  rename-project.yml  security-scan.yml
project_template/: .gitignore  .pre-commit-config.yaml  COMPLIANCE.md.njk  Makefile.jinja  Makefile.njk  README.md.jinja  README.md.njk  catalog-info.yaml.jinja  catalog-info.yaml.njk  check-extensions.sh  poetry.lock.njk  prevent-protected-file-chages.sh  pyproject.toml.jinja  pyproject.toml.njk  run_etl.py.jinja  run_etl.py.njk  run_rap_module.py.njk  {{ 'PIRR.md' if not is_public_repo }}.jinja
project_template/${{module_name}}/: extract.py
project_template/${{values.module_name}}/: __init__.py
project_template/${{values.package_name}}/: __init__.py  disclosure.py  estimation.py  ingestion.py  pipeline.py
project_template/.devcontainer/: devcontainer.json
project_template/.github/: CODEOWNERS.jinja  dependabot.yml.njk
project_template/.github/linters/: .markdown-link-check.json.jinja
project_template/.github/workflows/: ${{ 'codeql.yml' if values.is_public_repo }}.njk  ci.yml.jinja  ci.yml.njk  mypy.yml.jinja  mypy.yml.njk  security-scan.yml.jinja  security-scan.yml.njk  {{ 'codeql.yml' if is_public_repo }}.jinja
project_template/configs/: pipeline.yaml
project_template/docs/: index.md.njk
project_template/docs/adr/: index.md.jinja  index.md.njk
project_template/tests/e2e/: test_etl_workflow.py.jinja  (+1 more)
project_template/{{module_name}}/: __init__.py  extract.py
(+10 files in other folders)
