[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "ANN", "B", "A", "COM", "C4", "DTZ", "ISC", "ICN", "G", "PIE", "PYI", "PT", "Q", "RET", "SIM", "TID", "ARG", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN401", "COM812", "ISC001", "E203", "G004", "TRY300", "PLR0913", "PD901", "N999", "F841"]
unfixable = ["F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["project_template"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
install_types = true
non_interactive = true

[tool.poetry]
name = "python-rap-template"
version = "0.1.0"
description = "A reproducible analytical pipeline template for a Python project"
authors = ["ONSdigital"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"

[tool.poetry.group.dev.dependencies]
bandit = "^1.9.2"
pytest = "^9.0.2"
pytest-xdist = "^3.8.0"
ruff = "^0.14.8"
pytest-cov = "^7.0.0"
mypy = "^1.19.0"
pre-commit = "^4.5.0"
